@@ -1,6 +1,11 @@
 package com.mohistmc.mod.module.farmersdelight.integration.jei.category;
 
-
+import com.mohistmc.mod.module.farmersdelight.FarmersDelight;
+import com.mohistmc.mod.module.farmersdelight.common.crafting.CuttingBoardRecipe;
+import com.mohistmc.mod.module.farmersdelight.common.crafting.ingredient.ChanceResult;
+import com.mohistmc.mod.module.farmersdelight.common.registry.ModItems;
+import com.mohistmc.mod.module.farmersdelight.common.utility.TextUtils;
+import com.mohistmc.mod.module.farmersdelight.integration.jei.FDRecipeTypes;
 import javax.annotation.ParametersAreNonnullByDefault;
 import mezz.jei.api.constants.VanillaTypes;
 import mezz.jei.api.gui.builder.IRecipeLayoutBuilder;
@@ -9,8 +14,8 @@ import mezz.jei.api.gui.ingredient.IRecipeSlotsView;
 import mezz.jei.api.helpers.IGuiHelper;
 import mezz.jei.api.recipe.IFocusGroup;
 import mezz.jei.api.recipe.RecipeIngredientRole;
+import mezz.jei.api.recipe.RecipeType;
 import mezz.jei.api.recipe.category.IRecipeCategory;
-import mezz.jei.api.recipe.types.IRecipeType;
 import net.minecraft.ChatFormatting;
 import net.minecraft.client.gui.GuiGraphicsExtractor;
 import net.minecraft.core.NonNullList;
@@ -18,12 +23,6 @@ import net.minecraft.network.chat.Component;
 import net.minecraft.resources.Identifier;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.RecipeHolder;
-import com.mohistmc.mod.module.farmersdelight.FarmersDelight;
-import com.mohistmc.mod.module.farmersdelight.common.crafting.CuttingBoardRecipe;
-import com.mohistmc.mod.module.farmersdelight.common.crafting.ingredient.ChanceResult;
-import com.mohistmc.mod.module.farmersdelight.common.registry.ModItems;
-import com.mohistmc.mod.module.farmersdelight.common.utility.TextUtils;
-import com.mohistmc.mod.module.farmersdelight.integration.jei.FDRecipeTypes;
 
 @ParametersAreNonnullByDefault
 public class CuttingRecipeCategory implements IRecipeCategory<RecipeHolder<CuttingBoardRecipe>>
@@ -46,7 +45,7 @@ public class CuttingRecipeCategory implements IRecipeCategory<RecipeHolder<Cutti
 	}
 
 	@Override
-	public IRecipeType<RecipeHolder<CuttingBoardRecipe>> getRecipeType() {
+	public RecipeType<RecipeHolder<CuttingBoardRecipe>> getRecipeType() {
 		return FDRecipeTypes.CUTTING;
 	}
 
@@ -55,10 +54,9 @@ public class CuttingRecipeCategory implements IRecipeCategory<RecipeHolder<Cutti
 		return this.title;
 	}
 
-//	@Override
-//	public IDrawable getBackground() {
-//		return this.background;
-//	}
+	public IDrawable getBackground() {
+		return this.background;
+	}
 
 	@Override
 	public int getWidth() {
@@ -79,7 +77,7 @@ public class CuttingRecipeCategory implements IRecipeCategory<RecipeHolder<Cutti
 	public void setRecipe(IRecipeLayoutBuilder builder, RecipeHolder<CuttingBoardRecipe> holder, IFocusGroup focusGroup) {
 		CuttingBoardRecipe recipe = holder.value();
 		builder.addSlot(RecipeIngredientRole.INPUT, 16, 8).add(recipe.getTool());
-		builder.addSlot(RecipeIngredientRole.INPUT, 16, 27).add(recipe.getIngredients().getFirst());
+		builder.addSlot(RecipeIngredientRole.INPUT, 16, 27).add(recipe.getIngredients().get(0));
 
 		NonNullList<ChanceResult> recipeOutputs = recipe.getRollableResults();
 
@@ -92,13 +90,15 @@ public class CuttingRecipeCategory implements IRecipeCategory<RecipeHolder<Cutti
 			int yOffset = centerY + ((i / 2) * 19);
 
 			int index = i;
-			builder.addSlot(RecipeIngredientRole.OUTPUT, OUTPUT_GRID_X + xOffset, OUTPUT_GRID_Y + yOffset).add(recipeOutputs.get(i).stack())
-				.addRichTooltipCallback((_, tooltip) -> {
-					ChanceResult output = recipeOutputs.get(index);
-					float chance = output.chance();
-					if (chance != 1)
-						tooltip.add(TextUtils.JEI("chance", chance < 0.01 ? "<1" : (int) (chance * 100)).withStyle(ChatFormatting.GOLD));
-				});
+			builder.addSlot(RecipeIngredientRole.OUTPUT, OUTPUT_GRID_X + xOffset, OUTPUT_GRID_Y + yOffset)
+					.add(recipeOutputs.get(i).stack())
+					.addRichTooltipCallback((slotView, tooltip) -> {
+						ChanceResult output = recipeOutputs.get(index);
+						float chance = output.chance();
+						if (chance != 1)
+							tooltip.add(TextUtils.JEI("chance", chance < 0.01 ? "<1" : (int) (chance * 100))
+									.withStyle(ChatFormatting.GOLD));
+					});
 		}
 	}
 
